<resources>
    <string name="app_name">Viper Clothing</string>
    <string name="kids">KIDS</string>
    <string name="men">MEN</string>
    <string name="categories">CATEGORIES</string>
    <string name="wwomen">WOMEN</string>
    <string name="ankarra_print">ANKARA PRINT</string>
    <string name="kentte_print">KENTE PRINT</string>
    <string name="wedding_suit">WEDDING SUIT</string>
    <string name="menn">MEN</string>
    <string name="kitengge_print">KITENGE PRINT</string>
    <string name="kentee_print">KENTE PRINT</string>
    <string name="dashikii">DASHIKI</string>
    <string name="ankaraa_print">ANKARA PRINT</string>
    <string name="kiitenge_print">KITENGE PRINT</string>
    <string name="kidss">KIDS</string>
    <string name="kids_img">kids img</string>
    <string name="kids_img2">kids img2</string>
    <string name="kids_img3">kids img3</string>
    <string name="kids_img4">kids img4</string>
    <string name="profile_btn">profile btn</string>
    <string name="home">home</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="menu">menu</string>
    <string name="menu_men">menu men</string>
    <string name="ws_men">ws men</string>
    <string name="chart_men">chart men</string>
    <string name="home_men">home men</string>
    <string name="profile_men">profile men</string>
    <string name="kg_men">kg men</string>
    <string name="kt_men">kt men</string>
    <string name="ak_men">ak men</string>
    <string name="wss_men">wss men</string>
    <string name="kids_main_btn">kids main btn</string>
    <string name="main_menu">main menu</string>
    <string name="main_chart">main chart</string>
    <string name="main_home">main home</string>
    <string name="main_profile">main profile</string>
    <string name="men_main_btn">men main btn</string>
    <string name="women_main_btn">women main btn</string>
    <string name="menu_women">menu women</string>
    <string name="chart_women">chart women</string>
    <string name="home_women">home women</string>
    <string name="profile_women">profile women</string>
    <string name="kg_women">kg women</string>
    <string name="kt_women">kt women</string>
    <string name="dk_women">dk women</string>
    <string name="kente_print">KENTE PRINT</string>
    <string name="dashiki">DASHIKI</string>
    <string name="ankara_print">ANKARA PRINT</string>
    <string name="kitenge_print">KITENGE PRINT</string>
    <string name="women">WOMEN</string>
    <string name="ak_women">ak women</string>
    <string name="login">LOGIN</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="logo">logo</string>
    <string name="_85">$85</string>
    <string name="add_to_chart">ADD TO CHART</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="kittenge_print">KITENGE PRINT</string>
    <string name="purchsuit">purchsuit</string>
    <string name="add_to_cart">add to cart</string>
</resources>