<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <Button
        android:id="@+id/kidsBtn"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginTop="188dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/kids_main_btn"
        android:text="@string/kids"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.353" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchBtn"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:contextClickable="true"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/basket"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:srcCompat="@drawable/ic_menu" />

    <ImageButton
        android:id="@+id/basket"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/main_chart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:srcCompat="@drawable/ic_cart" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/main_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/main_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/basket"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="341dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:text="@string/categories"
        android:textColor="#050005"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn"
        app:layout_goneMarginTop="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/menBtn"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/men_main_btn"
        android:text="@string/men"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/womenBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/womenBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/womenBtn"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/women_main_btn"
        android:text="@string/women"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toEndOf="@+id/menBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView" />







</androidx.constraintlayout.widget.ConstraintLayout>