<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ws_men"
    tools:context=".MenOutfits">


    <ImageButton
        android:id="@+id/menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/menu_men"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/basket"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:srcCompat="@drawable/ic_menu" />

    <ImageButton
        android:id="@+id/basket"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/chart_men"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:srcCompat="@drawable/ic_cart" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/home_men"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/profile_men"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/basket"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_profile" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="651dp" />


    <ImageView

        android:id="@+id/imgView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/kg_men"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@mipmap/mmm" />


    <ImageView

        android:id="@+id/imgView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/kt_men"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@mipmap/nnn" />

    <ImageView

        android:id="@+id/imgView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/wss_men"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMenO2"
        app:srcCompat="@mipmap/ooo" />

    <ImageView
        android:id="@+id/imgView4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/ak_men"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMenO"
        app:srcCompat="@mipmap/ppp" />


    <TextView
        android:id="@+id/txtMenO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/kitenge_print"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/imgView" />


    <TextView
        android:id="@+id/txtMenO1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/ankara_print"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imgView4"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="@+id/imgView4"
        app:layout_constraintTop_toBottomOf="@+id/imgView4" />

    <TextView
        android:id="@+id/txtMenO2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/kente_print"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imgView2"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/imgView2"
        app:layout_constraintTop_toBottomOf="@+id/imgView2" />

    <TextView
        android:id="@+id/txtMenO3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/wedding_suit"
        android:textColor="#040000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imgView3"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="@+id/imgView3"
        app:layout_constraintTop_toBottomOf="@+id/imgView3" />

    <TextView
        android:id="@+id/catMen"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:background="#00000000"
        android:fontFamily="@font/audiowide"
        android:text="@string/men"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

</androidx.constraintlayout.widget.ConstraintLayout>